--- a/data/金融银行/汇丰银行.yaml
+++ b/data/金融银行/汇丰银行.yaml
@@ -1,8 +1,13 @@
 basic:
   organization: 汇丰银行
   cellPhone:
-    - +852 22333000
-    - +852 22333322
-    - +852 22333033
-    - +852 22333033
-  url: https://www.hsbc.com.hk
+    - 95366
+    - 10691175013
+    - 10692118022816
+    - 10691175505528
+    - 1069123979113
+    - 1069030045695512033
+    - 106911750210
+    - 1069030045695512116
+    - 106911750130
+  url: https://www.hsbc.com.cn
